enabling swedish language support

--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -3,7 +3,7 @@
    <head>
    	  <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
 	  <META HTTP-EQUIV="Expires" CONTENT="-1">
-      <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta http-equiv="Content-Language" content="en-us" />
       <meta http-equiv="Content-Author" content="Broadleaf Commerce" />
       <title>Broadleaf Commerce - Administrative Application</title>
