--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -6,6 +6,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
       <meta http-equiv="Content-Language" content="en-us" />
       <meta http-equiv="Content-Author" content="Broadleaf Commerce" />
+      <meta http-equiv="X-UA-Compatible" content="IE=8">
       <title>Broadleaf Commerce - Administrative Application</title>
       <link rel="stylesheet" type="text/css" href="org.broadleafcommerce.admin.demoAdmin/admin/style/admin.css" />
       <script> var isomorphicDir = "org.broadleafcommerce.admin.demoAdmin/sc/"; </script>
